--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <strong>VA minimi richiesti:</strong> ${VA_required.toFixed(1)} VA → <strong>scegli:</strong> ${VA_final} VA<br>
 
         <div class="note">
-          <strong>Nota:</strong> calcolo esclusivamente <strong>TA per TA di misura</strong>.  
+          <strong>Nota:</strong> calcolo esclusivamente per TA di misura.
           Le indicazioni di TA di protezione non sono incluse.
         </div>
 
